infra/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-deployment
  labels:
    app: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - name: sidekiq
          image: docker.io/drummeraki/tanoshimu:live
          command:
            [
              "bundle",
              "exec",
              "sidekiq",
              "-q",
              "active_storage_analysis",
              "-q",
              "active_storage_purge",
              "-q",
              "batch_queue",
              "-q",
              "sync",
              "-q",
              "default",
            ]
          imagePullPolicy: Always
