infra/tanoshimu-setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanoshimu-deployment
  labels:
    app: tanoshimu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanoshimu
  template:
    metadata:
      labels:
        app: tanoshimu
    spec:
      containers:
        - name: tanoshimu
          image: docker.io/drummeraki/tanoshimu:live
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command: ["bin/rails", "db:setup"]
