infra/tanoshimu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanoshimu-ingress
spec:
  backend:
    service:
      name: tanoshimu
      port:
        number: 80
